# template-Cpp-Project

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
cmake/: README.md
include/: example.h
src/: main.cpp
tests/: CMakeLists.txt  test_example.cpp
